--- a/action-a/action.yml
+++ b/action-a/action.yml
@@ -1,5 +1,7 @@
 name: "Hello Actions"
-description: "This is github - actions for test only"
+description: "Greet someone"
+author: "octocat@github.com"
+
 inputs:
   MY_NAME:
     description: "Who to greet"
